k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dj-ingress
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dj-service
            port:
              number: 80
